@@ -25,6 +25,8 @@ Version 2.7.0
     to the L2 Cache level on some platforms (e.g. x86) or a specific
     level between L2 and L3 on others (e.g. ARM Kungpeng 920).
     Thanks to Jonathan Cameron for the help.
+    - HWLOC_DONT_MERGE_CLUSTER_GROUPS=1 may be set in the environment
+      to prevent these groups from being merged with identical caches, etc.
 
 
 Version 2.6.0
